# altitrace

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  CLAUDE.md  Cargo.toml  HACKATHON.md  Makefile  PROGRESS.md  README.md  biome.json  docker-compose.yml  package.json  rust-toolchain.toml  rustfmt.toml  turbo.json  vercel.json
.github/workflows/: api.yml  frontend.yml
book/: CLAUDE.md  biome.json  check-links.ts  generate-redirects.ts  links-report.json  package.json  redirects.config.ts  sidebar.ts  tsconfig.json  vercel.json  vocs.config.ts
book/docs/pages/: index.mdx
book/docs/pages/api/: authentication.mdx  index.mdx  simulation.mdx  transactions.mdx
book/docs/pages/installation/: configuration.mdx  index.mdx
book/docs/pages/introduction/: index.mdx  why-altitrace.mdx
book/docs/pages/sdk/: access-lists.mdx  client-setup.mdx  index.mdx  installation.mdx  simulation.mdx  traces.mdx  transactions.mdx
book/docs/pages/webapp/: index.mdx
book/docs/snippets/: access-list-examples.ts  basic-client-setup.ts  installation-examples.ts  simulation-examples.ts  trace-examples.ts
