[workspace]
members = [
    "packages/api-rust",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Altitude Labs Limited"]
license = "MIT"
repository = "https://github.com/altitrace/altitrace"

[workspace.lints]
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rust.unreachable_pub = "warn"
rust.unused_must_use = "deny"
rustdoc.all = "warn"

[workspace.lints.clippy]
borrow_as_ptr = "warn"
branches_sharing_code = "warn"
cloned_instead_of_copied = "warn"
collection_is_never_read = "warn"
dbg_macro = "warn"
derive_partial_eq_without_eq = "warn"
doc_markdown = "warn"
empty_line_after_doc_comments = "warn"
empty_line_after_outer_attr = "warn"
enum_glob_use = "warn"
equatable_if_let = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
flat_map_option = "warn"
from_iter_instead_of_collect = "warn"
if_not_else = "warn"
if_then_some_else_none = "warn"
implicit_clone = "warn"
imprecise_flops = "warn"
iter_on_empty_collections = "warn"
iter_on_single_items = "warn"
iter_with_drain = "warn"
iter_without_into_iter = "warn"
large_stack_frames = "warn"
manual_assert = "warn"
manual_clamp = "warn"
manual_is_variant_and = "warn"
manual_string_new = "warn"
match_same_arms = "warn"
missing_const_for_fn = "warn"
mutex_integer = "warn"
naive_bytecount = "warn"
needless_bitwise_bool = "warn"
needless_continue = "warn"
needless_pass_by_ref_mut = "warn"
nonstandard_macro_braces = "warn"
option_as_ref_cloned = "warn"
or_fun_call = "warn"
path_buf_push_overwrite = "warn"
read_zero_byte_vec = "warn"
redundant_clone = "warn"
redundant_else = "warn"
single_char_pattern = "warn"
string_lit_as_bytes = "warn"
string_lit_chars_any = "warn"
suboptimal_flops = "warn"
suspicious_operation_groupings = "warn"
trailing_empty_array = "warn"
trait_duplication_in_bounds = "warn"
transmute_undefined_repr = "warn"
trivial_regex = "warn"
tuple_array_conversions = "warn"
type_repetition_in_bounds = "warn"
uninhabited_references = "warn"
uninlined_format_args = "allow"
unnecessary_self_imports = "warn"
unnecessary_struct_initialization = "warn"
unnested_or_patterns = "warn"
unused_peekable = "warn"
unused_rounding = "warn"
use_self = "warn"
useless_let_if_seq = "warn"
while_float = "warn"

[workspace.dependencies]
# Alloy
alloy-consensus = { version = "1.0.24", default-features = false }
alloy-primitives = "1.3"
alloy-sol-types = "1.3"
alloy-provider = { version = "1.0.24", features = [
    "anvil-api",
    "anvil-node",
    "debug-api",
    "ipc",
    "pubsub",
    "reqwest",
    "ws",
], default-features = false }
alloy-node-bindings = { version = "1.0.24", default-features = false }
alloy-rpc-client = "1.0.24"
alloy-rpc-types = "1.0.24"
alloy-rpc-types-eth = "1.0.24"
alloy-rpc-types-mev = "1.0.24"
alloy-rpc-types-trace = "1.0.24"
alloy-transport = "1.0.24"
alloy-transport-http = "1.0.24"
alloy-transport-ws = "1.0.24"

# API schema
utoipa = "5.3.1"
utoipa-swagger-ui = { version = "8.0.0-rc.1", features = ["actix-web"] }

# Async runtime
futures = "0.3.30"
futures-util = "0.3.30"
tokio = { version = "1.47", features = ["full"] }

# Cache
redis = { version = "0.32.5", features = ["tokio-comp"] }

# Web framework
actix = "0.13.5"
actix-web = "4.11"
actix-web-actors = "4.3"
actix-rt = "2.10.0"
actix-ws = "0.3.0"
tower = { version = "0.5.2" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"

# Error handling
anyhow = "1.0"
eyre = "0.6.8"
thiserror = "2.0"

# Logging and tracing
rolling-file = "0.2.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", default-features = false, features = [
  "env-filter",
  "fmt",
  "ansi",
  "json",
] }
tracing-appender = "0.2.3"
tracing-test = "0.2.5"

# Configuration
config = "0.15"
dotenvy = "0.15"

# Utilities
num_cpus = "1.17"
uuid = { version = "1.18", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
regex = "1.11"
validator = { version = "0.20.0", features = ["derive"] }
vergen = "9.0.6"
vergen-git2 = "1.0.7"
